--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,7 +24,6 @@
 #   go-tests = true
 #   unused-packages = true
 
-
 [[constraint]]
   name = "github.com/deckarep/golang-set"
   version = "1.7.0"
@@ -80,6 +79,10 @@
 [[constraint]]
   name = "github.com/fatih/structs"
   version = "v1.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/valyala/fasthttp"
 
 [prune]
   go-tests = true
