--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,7 @@
 #   go-tests = true
 #   unused-packages = true
 
+required = ["github.com/valyala/fasthttp"]
 
 [[constraint]]
   name = "github.com/deckarep/golang-set"
@@ -80,6 +81,10 @@
 [[constraint]]
   name = "github.com/fatih/structs"
   version = "v1.0"
+
+[[constraint]]
+    branch = "master"
+    name = "github.com/valyala/fasthttp"
 
 [prune]
   go-tests = true
