--- a/resource/mosn_config_xds.json
+++ b/resource/mosn_config_xds.json
@@ -100,7 +100,7 @@
                               "ClusterName": "c1",
                               "MetadataMatch": {
                                 "filter_metadata": {
-                                  "envoy.lb": {
+                                  "mosn.lb": {
                                     "stage": "dev",
                                     "version": "1.2-pre"
                                   }
@@ -118,7 +118,7 @@
                                   {
                                     "MetadataMatch": {
                                       "filter_metadata": {
-                                        "envoy.lb": {
+                                        "mosn.lb": {
                                           "version": "1.0"
                                         }
                                       }
@@ -129,7 +129,7 @@
                                   {
                                     "MetadataMatch": {
                                       "filter_metadmata": {
-                                        "envoy.lb": {
+                                        "mosn.lb": {
                                           "version": "1.1"
                                         }
                                       }
@@ -219,7 +219,7 @@
                               "ClusterName": "test_cpp",
                               "MetadataMatch": {
                                 "filter_metadata": {
-                                  "envoy.lb": {
+                                  "mosn.lb": {
                                     "label": "gray"
                                   }
                                 }
@@ -294,7 +294,7 @@
                               "ClusterName": "c1",
                               "MetadataMatch": {
                                 "filter_metadata": {
-                                  "envoy.lb": {
+                                  "mosn.lb": {
                                     "label": "gray"
                                   }
                                 }
