--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -48,7 +48,7 @@
                               "ClusterName": "c1",
                               "MetadataMatch": {
                                 "filter_metadata": {
-                                  "envoy.lb": {
+                                  "mosn.lb": {
                                     "stage": "dev",
                                     "version": "1.2-pre"
                                   }
@@ -66,7 +66,7 @@
                                   {
                                     "MetadataMatch": {
                                       "filter_metadata": {
-                                        "envoy.lb": {
+                                        "mosn.lb": {
                                           "version": "1.0"
                                         }
                                       }
@@ -77,7 +77,7 @@
                                   {
                                     "MetadataMatch": {
                                       "filter_metadmata": {
-                                        "envoy.lb": {
+                                        "mosn.lb": {
                                           "version": "1.1"
                                         }
                                       }
@@ -167,7 +167,7 @@
                               "ClusterName": "test_cpp",
                               "MetadataMatch": {
                                 "filter_metadata": {
-                                  "envoy.lb": {
+                                  "mosn.lb": {
                                     "version":"1.1",
                                     "stage":"pre-release",
                                     "label": "gray"
@@ -244,7 +244,7 @@
                               "ClusterName": "c1",
                               "MetadataMatch": {
                                 "filter_metadata": {
-                                  "envoy.lb": {
+                                  "mosn.lb": {
                                     "label": "gray",
                                     "version":"1.1",
                                     "stage":"pre-release"
