add check when paring protocol and health check config

--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -18,10 +18,10 @@
                 {
                   "type": "proxy",
                   "config": {
-                    "DownstreamProtocol": "http1",
+                    "DownstreamProtocol": "Http1",
                     "Name": "proxy_config",
                     "SupportDynamicRoute": true,
-                    "UpstreamProtocol": "http2",
+                    "UpstreamProtocol": "Http2",
                     "VirtualHosts": [
                       {
                         "Domains": [
