fix router's wildcard bug

--- a/resource/mosn_config.json
+++ b/resource/mosn_config.json
@@ -150,7 +150,7 @@
                         "Name": "sofa",
                         "RequireTls": "no",
                         "Domains":[
-                          "*"
+                          "*testwilccard"
                         ],
                         "Routers": [
                           {
