--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,7 +30,7 @@
 
 [[constraint]]
   name = "github.com/envoyproxy/go-control-plane"
-  version = "0.2.0"
+  version = "v0.4"
 
 [[constraint]]
   name = "github.com/gogo/protobuf"
