fix #49 united json config file

--- a/configs/mosn_config_odl.json
+++ b/configs/mosn_config_odl.json
@@ -4,7 +4,7 @@
       "default_log_path": "./log/default.log",
       "default_log_level": "DEBUG",
       "graceful_timeout": "10s",
-      "Processor": 1,
+      "processor": 1,
       "listeners": [
         {
           "name": "egress",
