--- a/configs/mosn_config_xds.json
+++ b/configs/mosn_config_xds.json
@@ -56,7 +56,7 @@
       "default_log_path": "./admin/mosn/default.log",
       "default_log_level": "DEBUG",
       "graceful_timeout": "10s",
-      "Processor": 1,
+      "processor": 1,
       "listeners": [
         {
           "name": "egress_http",
@@ -99,7 +99,7 @@
                             "Route": {
                               "ClusterName": "c1",
                               "MetadataMatch": {
-                                "filter_metadata": {
+                                "FilterMetadata": {
                                   "mosn.lb": {
                                     "stage": "dev",
                                     "version": "1.2-pre"
@@ -117,7 +117,7 @@
                                 "Clusters": [
                                   {
                                     "MetadataMatch": {
-                                      "filter_metadata": {
+                                      "FilterMetadata": {
                                         "mosn.lb": {
                                           "version": "1.0"
                                         }
@@ -218,7 +218,7 @@
                             "Route": {
                               "ClusterName": "test_cpp",
                               "MetadataMatch": {
-                                "filter_metadata": {
+                                "FilterMetadata": {
                                   "mosn.lb": {
                                     "label": "gray"
                                   }
@@ -293,7 +293,7 @@
                             "Route": {
                               "ClusterName": "c1",
                               "MetadataMatch": {
-                                "filter_metadata": {
+                                "FilterMetadata": {
                                   "mosn.lb": {
                                     "label": "gray"
                                   }
