support multiple server supported

--- a/configs/mosn_config.json
+++ b/configs/mosn_config.json
@@ -1,6 +1,7 @@
 {
   "servers": [
     {
+      "mosn_server_name":"mosn_server_1",
       "default_log_path": "/home/admin/mosn/logs/default.log",
       "default_log_level": "DEBUG",
       "graceful_timeout": "10s",
