tcp proxy example pass  and xds_config_test mistake fix

--- a/examples/tcpproxy-sample/config.json
+++ b/examples/tcpproxy-sample/config.json
@@ -13,6 +13,7 @@
 	       "filters": [{
 	           "type": "tcp_proxy",
 		   "config": {
+			  "cluster": "serverCluster",
 		      "routes":[
 		         {
 			   "cluster":"serverCluster"
