--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/envoyproxy/go-control-plane"
-  version = "0.4.0"
+  version = "=0.6.3"
 
 [[constraint]]
   name = "github.com/gogo/protobuf"
